; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nva3_pm.c_mclk_refresh_auto.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/extr_nva3_pm.c_mclk_refresh_auto.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_mem_exec_func = type { i32 }
%struct.nouveau_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nouveau_mem_exec_func*, i32)* @mclk_refresh_auto to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mclk_refresh_auto(%struct.nouveau_mem_exec_func* %0, i32 %1) #0 {
  %3 = alloca %struct.nouveau_mem_exec_func*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.nouveau_device*, align 8
  store %struct.nouveau_mem_exec_func* %0, %struct.nouveau_mem_exec_func** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.nouveau_mem_exec_func*, %struct.nouveau_mem_exec_func** %3, align 8
  %7 = getelementptr inbounds %struct.nouveau_mem_exec_func, %struct.nouveau_mem_exec_func* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call %struct.nouveau_device* @nouveau_dev(i32 %8)
  store %struct.nouveau_device* %9, %struct.nouveau_device** %5, align 8
  %10 = load %struct.nouveau_device*, %struct.nouveau_device** %5, align 8
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  %13 = zext i1 %12 to i64
  %14 = select i1 %12, i32 -2147483648, i32 0
  %15 = call i32 @nv_wr32(%struct.nouveau_device* %10, i32 1049104, i32 %14)
  ret void
}

declare dso_local %struct.nouveau_device* @nouveau_dev(i32) #1

declare dso_local i32 @nv_wr32(%struct.nouveau_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
